--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+autopep8==1.6.0
 cfgv==3.3.1
 click==8.1.3
 distlib==0.3.4
 filelock==3.7.1
+flake8==4.0.1
 Flask==2.1.2
 greenlet==1.1.2
 identify==2.5.1
@@ -9,13 +11,20 @@ importlib-metadata==4.11.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+mccabe==0.6.1
+mypy==0.960
+mypy-extensions==0.4.3
 nodeenv==1.6.0
 platformdirs==2.5.2
 pre-commit==2.19.0
+pycodestyle==2.8.0
+pyflakes==2.4.0
 PyYAML==6.0
 six==1.16.0
 SQLAlchemy==1.4.37
 toml==0.10.2
+tomli==2.0.1
+typing_extensions==4.2.0
 virtualenv==20.14.1
 Werkzeug==2.1.2
 zipp==3.8.0
